# sre-take-home-exercise-python

./: README.md  main.py  pyproject.toml  test.yaml
